# bank_tool

./: pyproject.toml
data/: transactions.csv  transactions.json
src/: controller.py  logger.py  main.py  masks.py  parser.py  utils.py
tests/: test_controller.py  test_masks.py  test_parser.py  test_utils.py
